--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ h2 {
                 <p align="justify" >
                     I'm now working on developing Erwin
                     <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
-                    <!-- <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin"></a> -->
+                    <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_erwin_badge.json&query=%24.message&label=Downloads&color=pink"></a>
                     , a bounded exhausive Solidity program generator. It has found over 25 Solidity compiler bugs and it is still on the
                     way to find more.
                 </p>
@@ -319,7 +319,7 @@ h2 {
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2306.06884" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> <div class="paper-tag">Pre-print</div> From Informal to Formal--Incorporating and Evaluating LLMs on Natural Language Requirements to Verifiable Formal Proofs </strong> Jialun Cao, Yaojie Lu, Meiziniu Li, <u>Haoyang Ma</u>, Haokun Li, Mengda He, Cheng Wen, Le Sun, Hongyu Zhang, Shengchao Qin, Shing-Chi Cheung, Cong Tian <a href="https://huggingface.co/fm-universe"><img src="https://img.shields.io/badge/Hugging%20Face-FFD21E?logo=fm-universe&logoColor=000)"></a> <img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_badge.json&query=%24.message&label=Downloads&color=pink">
+                <td scope="row"><strong> <div class="paper-tag">Pre-print</div> From Informal to Formal--Incorporating and Evaluating LLMs on Natural Language Requirements to Verifiable Formal Proofs </strong> Jialun Cao, Yaojie Lu, Meiziniu Li, <u>Haoyang Ma</u>, Haokun Li, Mengda He, Cheng Wen, Le Sun, Hongyu Zhang, Shengchao Qin, Shing-Chi Cheung, Cong Tian <a href="https://huggingface.co/fm-universe"><img src="https://img.shields.io/badge/Hugging%20Face-FFD21E?logo=fm-universe&logoColor=000)"></a> <img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_fm_badge.json&query=%24.message&label=Downloads&color=pink">
                 </td> 
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2501.16207" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
