--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ h2 {
             <tbody>
               <tr>
                 <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> A Tale of Two DL Cities: When Library Tests Meet Compiler </strong>Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
-                <td style="text-align: right"><a href="https://arxiv.org/abs/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
+                <td style="text-align: right"><a href="https://arxiv.org/pdf/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
                 <td scope="row"><strong> <div class="paper-tag">ISSTA '24</div> Towards Understanding Solidity Compiler Bugs</strong> <u>Haoyang Ma</u>, Wuqi Zhang, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
