--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ h2 {
                     <img style="float: down; margin-left: 20px; padding-bottom: 10px;" src="birdy.jpg" alt="photo" width="150" class="profile-pic" /> 
                 </div> -->
             </div>
-            <div class="news-container">
+            <!-- <div class="news-container">
                 <p align="justify" >
                     I'm now working on developing Erwin
                     <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
@@ -278,7 +278,7 @@ h2 {
                     , a bounded exhausive Solidity program generator. It has found over 25 Solidity compiler bugs and it is still on the
                     way to find more.
                 </p>
-            </div>
+            </div> -->
 
             <script type="text/javascript">
                 document.getElementById('address').style.display = 'none';
@@ -315,13 +315,18 @@ h2 {
                 <td style="text-align: right"><a href="papers/ase20.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> <div class="paper-tag">Pre-print</div> A Survey of Modern Compiler Fuzzing </strong></td>
+                <td scope="row"><strong> <div class="paper-tag">Pre-print</div> A Survey of Modern Compiler Fuzzing </strong> <u>Haoyang Ma</u> </td>
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2306.06884" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
                 <td scope="row"><strong> <div class="paper-tag">Pre-print</div> From Informal to Formal--Incorporating and Evaluating LLMs on Natural Language Requirements to Verifiable Formal Proofs </strong> Jialun Cao, Yaojie Lu, Meiziniu Li, <u>Haoyang Ma</u>, Haokun Li, Mengda He, Cheng Wen, Le Sun, Hongyu Zhang, Shengchao Qin, Shing-Chi Cheung, Cong Tian <a href="https://huggingface.co/fm-universe"><img src="https://img.shields.io/badge/Hugging%20Face-FFD21E?logo=fm-universe&logoColor=000)"></a> <img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_fm_badge.json&query=%24.message&label=Downloads&color=pink">
                 </td> 
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2501.16207" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
+              </tr>
+              <tr>
+                <td scope="row"><strong> <div class="paper-tag">Pre-print</div>Bounded Exhaustive Random Program Generation for Testing Solidity Compilers and Analyzers</strong> <u>Haoyang Ma</u>, Alastair F. Donaldson, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
+                    <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_erwin_badge.json&query=%24.message&label=Downloads&color=pink"></a></td>
+                <td style="text-align: right"><a href="https://arxiv.org/pdf/2503.20332" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
             </tbody>
           </table>
