--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@ h2 {
 </head>
 
 <body>
-            <h1 style="text-align:center">Ma Haoyang</h1>
+            <div style="display: flex; align-items: center; justify-content: center; position: relative;">
+                <h1 style="text-align: center; flex-grow: 1;">Ma Haoyang</h1>
+                <img src="birdy.png" alt="Profile Picture" style="width: 100px; height: auto; position: absolute; right: 0;">
+            </div>
 
             <hr style="width: 100%">
 
@@ -231,7 +234,7 @@ h2 {
             <b> <a href="mailto:haoyang.ma@connect.ust.hk"><i class="fa-solid fa-envelope"></i></a></b>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="https://github.com/haoyang9804"><i class="fa-brands fa-github"></i></a></b>
-            <!-- &nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <div class="wechat-container">
                 <b> 
                     <a href="#">
@@ -242,14 +245,13 @@ h2 {
                     <img src="./wechat.jpg" alt="WeChat QR Code">
                     <p style="margin:10px 0 0; color: #666; font-size: 0.9em;">Scan to add me</p>
                 </div>
-            </div> -->
+            </div>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="./notes.html"><i class="fa-solid fa-note-sticky"></i></a></b>
             </div>
 
             <div class="new-container">
                 <!-- <div class="left-column"> -->
-                    <!-- <h2 style="width: 100%; text-align: left;"> Bio </h2> -->
                     <p align="justify" >
                         <br>PhD candidate at Hong Kong University of Science and Technology, <a href="http://castle.cse.ust.hk/">Castle group</a>.
                         <br>Visiting researcher at Imperial College London, <a href="https://fastpl.doc.ic.ac.uk/">fastPL group</a>.
@@ -264,10 +266,9 @@ h2 {
                     <p align="justify" >
                         Until now, my <a href="https://sites.google.com/view/qingchaoshen">collaborator</a> and I have studied over 1000 compiler bugs (including 603 deep learning compiler bugs and 533 Solidity compiler bugs) and detected more than 300 compiler bugs (For instance, Solidity compiler bugs: <a href="https://github.com/ethereum/solidity/issues?q=author%3Ahaoyang9804"><i class="fa-solid fa-bug"></i></a>, <a href="https://github.com/hyperledger-solang/solang/issues?q=author%3Ahaoyang9804"><i class="fa-solid fa-bugs"></i></a>; deep learning compiler bugs: <a href="https://github.com/apache/tvm/issues?q=author%3Ajikechao"><i class="fa-solid fa-virus"></i></a>, <a href="https://github.com/apache/tvm/issues?q=author%3Ahaoyang9804"><i class="fa-solid fa-viruses"></i></a>).
                     </p>
-                <!-- </div> -->
-                <!-- </div> -->
-                <!-- <div class="right-column">
-                    <img style="float: down; margin-left: 20px; padding-bottom: 10px;" src="birdy.jpg" alt="photo" width="150" class="profile-pic" /> 
+                <!-- </div>
+                <div class="right-column">
+                    <img style="float: down; margin-left: 20px; padding-bottom: 10px;" src="birdy.png" alt="photo" width="150" class="profile-pic" /> 
                 </div> -->
             </div>
             <!-- <div class="news-container">
