--- a/index.html
+++ b/index.html
@@ -297,7 +297,11 @@ h2 {
         <table style="width: 100%;">
             <tbody>
               <tr>
-                <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> A Tale of Two DL Cities: When Library Tests Meet Compiler </strong>Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
+                <td scope="row"><strong> <div class="paper-tag">FSE '25</div> An Empirical Study of Bugs in Data Visualization Libraries</strong>Weiqi Lu, Yongqiang Tian, Xiaohan Zhong, <u>Haoyang Ma</u>, Zhenyang Xu, Chengnian Sun</td>
+                <!-- <td style="text-align: right"><a href="https://arxiv.org/pdf/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td> -->
+              </tr>
+              <tr>
+                <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> A Tale of Two DL Cities: When Library Tests Meet Compiler</strong>Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
