--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ h2 {
             <b> <a href="./notes.html"><i class="fa-solid fa-note-sticky"></i></a></b>
             </div>
 
-            <div class="new-container" style="display: flex; align-items: flex-start; justify-content: space-between;">
-                <div style="flex: 3;">
+            <div class="bio-container">
+                <div class="left-column">
                     <p align="justify">
                         <br>PhD candidate at Hong Kong University of Science and Technology, <a href="http://castle.cse.ust.hk/">Castle group</a>.
                         <br>Visiting researcher at Imperial College London, <a href="https://fastpl.doc.ic.ac.uk/">fastPL group</a>.
@@ -299,6 +299,9 @@ h2 {
                     <p align="justify">
                         Until now, my <a href="https://sites.google.com/view/qingchaoshen">collaborator</a> and I have studied over 1000 compiler bugs (including 603 deep learning compiler bugs and 533 Solidity compiler bugs) and detected more than 300 compiler bugs (For instance, Solidity compiler bugs: <a href="https://github.com/ethereum/solidity/issues?q=author%3Ahaoyang9804"><i class="fa-solid fa-bug"></i></a>, <a href="https://github.com/hyperledger-solang/solang/issues?q=author%3Ahaoyang9804"><i class="fa-solid fa-bugs"></i></a>; deep learning compiler bugs: <a href="https://github.com/apache/tvm/issues?q=author%3Ajikechao"><i class="fa-solid fa-virus"></i></a>, <a href="https://github.com/apache/tvm/issues?q=author%3Ahaoyang9804"><i class="fa-solid fa-viruses"></i></a>).
                     </p>
+                </div>
+                <div class="right-column">
+                    <img src="./birdy.jpg" alt="Profile" class="profile-pic", style="width: 150px; height: auto; align-self: flex-start; margin-top: 40px;">
                 </div>
             </div>
             <!-- <div class="news-container">
