--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ h2 {
               </tr>
               <tr>
                 <td scope="row"><strong> <div class="paper-tag">FSE '25</div> An Empirical Study of Bugs in Data Visualization Libraries </strong>Weiqi Lu, Yongqiang Tian, Xiaohan Zhong, <u>Haoyang Ma</u>, Zhenyang Xu, Chengnian Sun</td>
-                <!-- <td style="text-align: right"><a href="https://arxiv.org/pdf/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td> -->
+                <td style="text-align: right"><a href="https://arxiv.org/pdf/2506.15084" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
                 <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> A Tale of Two DL Cities: When Library Tests Meet Compiler</strong> Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
@@ -371,7 +371,7 @@ h2 {
           </table>
           <p style="font-size: smaller; margin-top: 10px;"><sup>*</sup> indicates co-first authorship.</p>
         <h2 style="width: 100%; text-align: left;"> Experience </h2>
-        <strong> Huawei HK (upcoming)</strong>: Research Intern at Compiler Technologies Lab, June 2025 ~ <i class="fa-solid fa-infinity"></i><br>
+        <strong> Huawei HK </strong>: Research Intern at Compiler Technologies Lab, June 2025 ~ <i class="fa-solid fa-infinity"></i><br>
         <strong> Imperial College London </strong>: Visiting Researcher, Sep 2024 ~ Feb 2025<br>
         <strong> Intel </strong>: Compiler Engineer Intern, Feb 2024 ~ Jul 2024<br>
         <strong> SiliconFlow </strong>: AI Framework Development Intern, Dec 2023 ~ Feb 2024<br>
