--- a/index.html
+++ b/index.html
@@ -371,7 +371,9 @@ h2 {
           </table>
           <p style="font-size: smaller; margin-top: 10px;"><sup>*</sup> indicates co-first authorship.</p>
         <h2 style="width: 100%; text-align: left;"> Experience </h2>
-        <strong> Huawei HK </strong>: Research Intern at Compiler Technologies Lab, June 2025 ~ <i class="fa-solid fa-infinity"></i><br>
+
+        <strong> Ant Group </strong>: Research Intern at Skyward Lab, working on web3 security, August 2025 ~ <i class="fa-solid fa-infinity"></i><br>
+        <strong> Huawei HK </strong>: Research Intern at Compiler Technologies Lab, June 2025 ~ August 2025<br>
         <strong> Imperial College London </strong>: Visiting Researcher, Sep 2024 ~ Feb 2025<br>
         <strong> Intel </strong>: Compiler Engineer Intern, Feb 2024 ~ Jul 2024<br>
         <strong> SiliconFlow </strong>: AI Framework Development Intern, Dec 2023 ~ Feb 2024<br>
