--- a/index.html
+++ b/index.html
@@ -328,6 +328,14 @@ h2 {
 
         <table style="width: 100%;">
             <tbody>
+                <tr>
+                <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> Optimization-Aware Test Generation for Deep Learning Compilers</strong> Qingchao Shen, Zan Wang, <u>Haoyang Ma</u>, Yongqiang Tian, Lili Huang, Zibo Xiao, Junjie Chen, Shing-Chi Cheung</td>
+              </tr>
+              <tr>
+                <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> Bounded Exhaustive Random Program Generation for Testing Solidity Compilers and Analyzers</strong> <u>Haoyang Ma</u>, Alastair F. Donaldson, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
+                    <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_erwin_badge.json&query=%24.message&label=Downloads&color=pink"></a></td>
+                <td style="text-align: right"><a href="https://arxiv.org/pdf/2503.20332" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
+              </tr>
             <tr>
                 <td scope="row"><strong> <div class="paper-tag">ACL '25 Main</div> From Informal to Formal--Incorporating and Evaluating LLMs on Natural Language Requirements to Verifiable Formal Proofs </strong> Jialun Cao, Yaojie Lu, Meiziniu Li, <u>Haoyang Ma</u>, Haokun Li, Mengda He, Cheng Wen, Le Sun, Hongyu Zhang, Shengchao Qin, Shing-Chi Cheung, Cong Tian <a href="https://huggingface.co/fm-universe"><img src="https://img.shields.io/badge/Hugging%20Face-FFD21E?logo=fm-universe&logoColor=000)"></a> <img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_fm_badge.json&query=%24.message&label=Downloads&color=pink">
                 </td> 
@@ -362,11 +370,6 @@ h2 {
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2306.06884" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               
-              <tr>
-                <td scope="row"><strong> <div class="preprint-tag">preprint</div> Bounded Exhaustive Random Program Generation for Testing Solidity Compilers and Analyzers</strong> <u>Haoyang Ma</u>, Alastair F. Donaldson, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
-                    <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="Dynamic JSON Badge" src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fraw.githubusercontent.com%2Fhaoyang9804%2Fhaoyang9804.github.io%2Fmaster%2Fdownloads_erwin_badge.json&query=%24.message&label=Downloads&color=pink"></a></td>
-                <td style="text-align: right"><a href="https://arxiv.org/pdf/2503.20332" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
-              </tr>
             </tbody>
           </table>
           <p style="font-size: smaller; margin-top: 10px;"><sup>*</sup> indicates co-first authorship.</p>
