--- a/index.html
+++ b/index.html
@@ -396,8 +396,9 @@ table td strong {
 .paper-title {
     font-style: italic;
     font-weight: 600;
-    font-size: 1.05em;
+    font-size: 1.08em;
     color: #1a202c;
+    letter-spacing: 0.2px;
 }
 
 /* Section content styling */
@@ -765,31 +766,31 @@ table img:hover {
                     <td><a href="https://arxiv.org/pdf/2501.16207" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="paper-tag">FSE '25</div> An Empirical Study of Bugs in Data Visualization Libraries</strong> Weiqi Lu, Yongqiang Tian, Xiaohan Zhong, <u>Haoyang Ma</u>, Zhenyang Xu, Chengnian Sun</td>
+                    <td><strong><div class="paper-tag">FSE '25</div> <span class="paper-title">An Empirical Study of Bugs in Data Visualization Libraries</span></strong> Weiqi Lu, Yongqiang Tian, Xiaohan Zhong, <u>Haoyang Ma</u>, Zhenyang Xu, Chengnian Sun</td>
                     <td><a href="https://arxiv.org/pdf/2506.15084" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="paper-tag">ICSE '25</div> A Tale of Two DL Cities: When Library Tests Meet Compiler</strong> Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
+                    <td><strong><div class="paper-tag">ICSE '25</div> <span class="paper-title">A Tale of Two DL Cities: When Library Tests Meet Compiler</span></strong> Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
                     <td><a href="https://arxiv.org/pdf/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="paper-tag">ISSTA '24</div> Towards Understanding Solidity Compiler Bugs</strong> <u>Haoyang Ma</u>, Wuqi Zhang, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
+                    <td><strong><div class="paper-tag">ISSTA '24</div> <span class="paper-title">Towards Understanding Solidity Compiler Bugs</span></strong> <u>Haoyang Ma</u>, Wuqi Zhang, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
                     <td><a href="https://arxiv.org/pdf/2407.05981" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="paper-tag">ISSTA '23</div> Fuzzing Deep Learning Compilers with HirGen</strong> <u>Haoyang Ma</u>, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
+                    <td><strong><div class="paper-tag">ISSTA '23</div> <span class="paper-title">Fuzzing Deep Learning Compilers with HirGen</span></strong> <u>Haoyang Ma</u>, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
                     <td><a href="https://arxiv.org/pdf/2208.02193" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="paper-tag">FSE '21</div> A Comprehensive Study of Deep Learning Compiler Bugs</strong> Qingchao Shen, <u>Haoyang Ma</u>, Junjie Chen, Yongqiang Tian, Shing-Chi Cheung, Xiang Chen</td>
+                    <td><strong><div class="paper-tag">FSE '21</div> <span class="paper-title">A Comprehensive Study of Deep Learning Compiler Bugs</span></strong> Qingchao Shen, <u>Haoyang Ma</u>, Junjie Chen, Yongqiang Tian, Shing-Chi Cheung, Xiang Chen</td>
                     <td><a href="papers/fse21.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="paper-tag">ASE '20</div> Enhanced Compiler Bug Isolation via Memoized Search</strong> Junjie Chen, <u>Haoyang Ma*</u>, Lingming Zhang</td>
+                    <td><strong><div class="paper-tag">ASE '20</div> <span class="paper-title">Enhanced Compiler Bug Isolation via Memoized Search</span></strong> Junjie Chen, <u>Haoyang Ma*</u>, Lingming Zhang</td>
                     <td><a href="papers/ase20.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
                 <tr>
-                    <td><strong><div class="preprint-tag">preprint</div> A Survey of Modern Compiler Fuzzing</strong> <u>Haoyang Ma</u></td>
+                    <td><strong><div class="preprint-tag">preprint</div> <span class="paper-title">A Survey of Modern Compiler Fuzzing</span></strong> <u>Haoyang Ma</u></td>
                     <td><a href="https://arxiv.org/pdf/2306.06884" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
                 </tr>
             </tbody>
